add simple database example

--- a/Basics.DataSets/Basics.DataSets.csproj
+++ b/Basics.DataSets/Basics.DataSets.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Demo1.mdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Demo1_log.ldf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="DemoDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>DemoDataSet.Designer.cs</LastGenOutput>
