add connection string from app.config

--- a/Basics.DataSets/App.config
+++ b/Basics.DataSets/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <connectionStrings>
     <clear />  
-      <add name="Demo1ConnectionString1"
+      <add name="Demo1ConnectionString"
        providerName="System.Data.SqlClient"
-       connectionString="Valid Connection String;" />  
+       connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=.\Demo1.mdf;Integrated Security=True;Connect Timeout=30;" />  
   </connectionStrings>
 </configuration>
