--- a/AdoNet.DataSets/App.config
+++ b/AdoNet.DataSets/App.config
@@ -4,6 +4,9 @@
     <clear />  
       <add name="Demo1ConnectionString"
        providerName="System.Data.SqlClient"
-       connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=.\Demo1.mdf;Integrated Security=True;Connect Timeout=30;" />  
+       connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=.\Demo1.mdf;Integrated Security=True;Connect Timeout=30;" />
+      <add name="Demo1ConnectionString_SQLite"
+        providerName="Microsoft.Data.SQLite"
+        connectionString=":memory:" />
   </connectionStrings>
 </configuration>
